--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,9 @@ body {
 /* Home, Logo */
 
 .logo {
-	
-	margin: 0px auto;
+	text-align: center;
+	margin: 0 auto;
+	display: inline;
 }
 
 /* Navigatie */
